--- a/templates/layout.html
+++ b/templates/layout.html
@@ -73,7 +73,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="static/js/scripts.js"></script>
+    <script src="{{url_for('static', filename='js/scripts.js')}}"></script>
 </body>
 
 </html>
